--- a/options.html
+++ b/options.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	  	<title>IAR Injection Options</title>
+	  	<title>ORI NewWorld CAD Login</title>
 	  	<style>
 		    body: { padding: 20px; }
 		    input[type=text], input[type=password], select {
@@ -114,8 +114,6 @@
 		<div id="message">Options Saved!</div>
 		<div id="mainDiv">
 			<form id="settings" name="settings" action="#">
-				<div class="alert alert-danger">By using this extension, you are agreeing to IAmResponding's Cookie Policy, which will be auto-accepted by this extension.  If you wish to view the cookie that you are agreeing to, you can visit <a target="_blank" href="https://iamresponding.com">https://iamresponding.com</a></div>
-
 				<label for="username">Username:</label>
 				<input type="text" id="username" name="username">
 
